[package]
name = "sandwich"
version = "0.1.0"
authors = ["Taylor Snead <taylorsnead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
futures = "0.3"
itertools = "*"
nom = "*"
serde_yaml = "*"
serde = { version = "1", features = ["derive"] }
derive_deref = "*"
rand = "*"
rodio = "0.11"
seqalign = "*"
bincode = "*"
async-std = {version = "1.5", features = ["attributes"]}
hostname = "0.3"
piston2d-graphics = "0.36"
piston_window = "*"
